--- a/index.html
+++ b/index.html
@@ -35,5 +35,59 @@
         <a href="/">Primary Link</a>
         <a href="/">Secondary Link</a>
         <a href="https://google.com">Go to Google</a>
+
+        <hr />
+
+        <h2>@Lists</h2>
+        <h3>Unordered List</h3>
+        <p>Unordered list shows list items in bullets that can eb removed using CSS.</p>
+
+        <ul>
+            <li>Item one</li>
+            <li>Item two</li>
+            <li>Item three</li>
+        </ul>
+
+        <h3>Unordered Inline List</h3>
+        <ul>
+            <li>Inline Item one</li>
+            <li>Inline Item two</li>
+            <li>Inline Item three</li>
+        </ul>
+
+        <h3>Ordered List</h3>
+        <ul>
+            <li>milk</li>
+            <li>eggs</li>
+            <li>bread </li>
+            <li>bread </li>
+        </ul>
+
+        <h3>Reverse Ordered List</h3>
+        <ul>
+            <li>milk</li>
+            <li>eggs</li>
+            <li>bread </li>
+            <li>bread </li>
+        </ul>
+
+        <hr>
+
+        <h2>@nav</h2>
+        <nav>
+            <div>I am a Developer</div>
+            <ul>
+                <li><a href="/">Home</a></li>
+                <li><a href="/">About</a></li>
+                <li><a href="/">Projects</a></li>
+                <li><a href="/">Blogs</a></li>
+            </ul>
+        </nav>
+
+        <hr>
+        <h2>@Header</h2>
+        <header>
+            <img src="./Images/undraw.png" alt="Hero Image">
+        </header>
     </body>
 </html>
