refactor: added till section

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/">About</a></li>
-                <li><a href="/">Projects</a></li>
+                <li><a href="./projects.html">Projects</a></li>
                 <li><a href="/">Blogs</a></li>
             </ul>
         </nav>
@@ -89,5 +89,17 @@
         <header>
             <img src="./Images/undraw.png" alt="Hero Image">
         </header>
+
+        <hr>
+
+        <h2>@section</h2>
+        <section>
+            <h3>@White Section</h3>
+            <p>This section will have a white background </p>
+        </section>
+        <section>
+            <h3>@Gray Section</h3>
+            <p>This section will have a white background </p>
+        </section>
     </body>
 </html>
