Completed HTML for Component

--- a/index.html
+++ b/index.html
@@ -92,14 +92,25 @@
 
         <hr>
 
-        <h2>@section</h2>
+        <h2>@Section</h2>
         <section>
             <h3>@White Section</h3>
-            <p>This section will have a white background </p>
+            <p>This section will have a white background</p>
         </section>
         <section>
             <h3>@Gray Section</h3>
-            <p>This section will have a white background </p>
+            <p>This section will have a white background</p>
         </section>
+
+        <h2>@Footer</h2>
+        <footer>
+            <div>&copy; Bharati 2021</div>
+            <ul>
+                <li>SocialLink</li>
+                <li>SocialLink</li>
+                <li>SocialLink</li>
+                <li>SocialLink</li>
+            </ul>
+        </footer>
     </body>
 </html>
