--- a/index.html
+++ b/index.html
@@ -5,8 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Component Library</title>
+
+        <!-- 
+            Style tag
+        <style>
+            body {
+                color: red;
+            }
+        </style> -->
+
+        <!-- External CSS sheet link -->
+        <link rel="stylesheet" href="styles.css">
     </head>
+
     <body>
+        <!-- Inline CSS -->
+        <!-- style="color: red;" -->
         <h1>Bharati's component Library</h1>
         <p>I am attending neog.camp tp consistently develop skills by learning and building projects that look good!</p>
         <hr />
