style: added typography

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <!-- style="color: red;" -->
         <h1>Bharati's component Library</h1>
         <p>I am attending neog.camp tp consistently develop skills by learning and building projects that look good!</p>
+        <p>This paragraph will have <strong>bold</strong> text.</p>
         <hr />
 
         <h2>@Typography</h2>
