css: added container

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
         <h2>@Container</h2>
 
         <h3>Fluid Container</h3>
-        <div>This isa fluid container, and it will take up the entire width of the page</div>
+        <div class="container container-fluid">This isa fluid container, and it will take up the entire width of the page</div>
 
         <h3>Centred Container</h3>
-        <p>This will take up the specified width, and will be centered in the page</p>
+        <div class="container container-center">This will take up the specified width, and will be centered in the page</div>
 
         <hr />
 
