--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
         <hr />
 
         <h2>@Links</h2>
-        <a href="/">Primary Link</a>
-        <a href="/">Secondary Link</a>
-        <a href="https://google.com">Go to Google</a>
+        <a href="/" class="link-primary link">Primary Link</a>
+        <a href="/" class="link-secondary link">Secondary Link</a>
 
         <hr />
 
