--- a/index.html
+++ b/index.html
@@ -56,34 +56,34 @@
         <h3>Unordered List</h3>
         <p>Unordered list shows list items in bullets that can eb removed using CSS.</p>
 
-        <ul>
+        <ul class="list-non-bullet">
             <li>Item one</li>
             <li>Item two</li>
             <li>Item three</li>
         </ul>
 
         <h3>Unordered Inline List</h3>
-        <ul>
+        <ul class="list-non-bullet list-item-inline">
             <li>Inline Item one</li>
             <li>Inline Item two</li>
             <li>Inline Item three</li>
         </ul>
 
         <h3>Ordered List</h3>
-        <ul>
+        <ol>
             <li>milk</li>
             <li>eggs</li>
             <li>bread </li>
             <li>bread </li>
-        </ul>
+        </ol>
 
         <h3>Reverse Ordered List</h3>
-        <ul>
+        <ol reversed>
             <li>milk</li>
             <li>eggs</li>
             <li>bread </li>
             <li>bread </li>
-        </ul>
+        </ol>
 
         <hr>
 
