--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         <hr>
 
         <h2>@nav</h2>
-        <nav>
-            <div>I am a Developer</div>
-            <ul>
-                <li><a href="/">Home</a></li>
-                <li><a href="/">About</a></li>
-                <li><a href="./projects.html">Projects</a></li>
-                <li><a href="/">Blogs</a></li>
+        <nav class="nav-bar container">
+            <div class="brand">I am a Developer</div>
+            <ul class="list-item-inline nav-bar-links">
+                <li><a href="/" class="link active">Home</a></li>
+                <li><a href="/" class="link">About</a></li>
+                <li><a href="./projects.html" class="link">Projects</a></li>
+                <li><a href="/" class="link">Blogs</a></li>
             </ul>
         </nav>
 
