--- a/index.html
+++ b/index.html
@@ -100,8 +100,9 @@
 
         <hr>
         <h2>@Header</h2>
-        <header>
-            <img src="./Images/undraw.png" alt="Hero Image">
+        <header class="hero">
+            <img class="hero-img" src="./Images/undraw.png" alt="Hero Image">
+            <h1 class="hero-head">Bharati Subramanian</h1>
         </header>
 
         <hr>
