--- a/index.html
+++ b/index.html
@@ -108,14 +108,16 @@
         <hr>
 
         <h2>@Section</h2>
-        <section>
+        <section class="section container container-center">
             <h3>@White Section</h3>
             <p>This section will have a white background</p>
         </section>
-        <section>
+        <section class="section light-gray container container-center">
             <h3>@Gray Section</h3>
-            <p>This section will have a white background</p>
+            <p>This section will have a light gray background</p>
         </section>
+
+        <hr />
 
         <h2>@Footer</h2>
         <footer>
