--- a/index.html
+++ b/index.html
@@ -120,14 +120,15 @@
         <hr />
 
         <h2>@Footer</h2>
-        <footer>
-            <div>&copy; Bharati 2021</div>
-            <ul>
-                <li>SocialLink</li>
-                <li>SocialLink</li>
-                <li>SocialLink</li>
-                <li>SocialLink</li>
+        <footer class="footer container">
+            <div class="footer-head">Footer heading</div>
+            <ul class="social-links list-item-inline list-non-bullet">
+                <li><a href="#" class="link">SocialLink One</a></li>
+                <li><a href="#" class="link">SocialLink Two</a></li>
+                <li><a href="#" class="link">SocialLink Three</a></li>
             </ul>
+            <small class="copy">&copy; Bharati 2021</small>
+
         </footer>
     </body>
 </html>
