Completed Portfolio Home

--- a/lib/components.html
+++ b/lib/components.html
@@ -15,7 +15,7 @@
         </style> -->
 
         <!-- External CSS sheet link -->
-        <link rel="stylesheet" href="../styles.css">
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
