--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <title>Home | Bharati Subramanian</title>
 
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="mobile.css">
 
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     </head>
@@ -15,9 +16,9 @@
         <nav class="nav-bar container">
             <div class="brand"><em>Bharati Subramanian</em></div>
             <ul class="inline-list nav-bar-links">
-                <li><a href="/" class="link active">Home</a></li>
-                <li><a href="./projects.html" class="link">Projects</a></li>
-                <li><a href="/" class="link">Blogs</a></li>
+                <li><a href="/" class="link nav-link active">Home</a></li>
+                <li><a href="./projects.html" class="link nav-link">Projects</a></li>
+                <li><a href="/" class="link nav-link">Blogs</a></li>
             </ul>
         </nav>
         <header class="hero">
@@ -29,19 +30,68 @@
             <section class="bg-light-gray technologies section container container-center">
                 <h2 class="section-head secondary-color">Technologies and Skills</h2>
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>Some of the technologies I am familiar with are:</h3>
-                    <ul class="inline-list">
-                        <li><span class="fa-icon"><i class="fab fa-html5"></i></span>HTML5</li>
-                        <li><span class="fa-icon"><i class="fab fa-css3-alt"></i></span>CSS3</li>
-                        <li><span class="fa-icon"><i class="fab fa-js"></i></span>JavaScript</li>
-                        <li><span class="fa-icon"><i class="fab fa-react"></i></span>ReactJS</li>
-                        <li><span class="fa-icon"><i class="fab fa-node-js"></i></span>Node.js</li>
-                        <li><span class="fa-icon"><i class="fab fa-java"></i></span>Java</li>
-                        <li><span class="fa-icon"><i class="fab fa-python"></i></span>Python</li>
-                        <li><span class="fa-icon"><i class="fas fa-database"></i></span>SQL</li>
-                        <li><span class="fa-icon"><i class="fab fa-git-alt"></i></span>Git</li>
-                        <li><span class="fa-icon"><i class="fab fa-github"></i></span>GitHub</li>
-                        <li></li>
-                    </ul>
+                <div class="tech-stack">
+                <p class="tech-stack">
+                    <span class="fa-icon">
+                        <i class="fab fa-html5"></i>
+                    </span>
+                    HTML5
+                </p>
+                <p>
+                    <span class="fa-icon">
+                        <i class="fab fa-css3-alt"></i>
+                    </span>
+                    CSS3
+                </p>
+                <p>
+                    <span class="fa-icon">
+                        <i class="fab fa-js"></i>
+                    </span>
+                    JavaScript
+                </p>
+                <p>
+                    <span class="fa-icon">
+                        <i class="fab fa-react"></i>
+                    </span>
+                    ReactJS
+                </p>
+                <p>
+                    <span class="fa-icon">
+                        <i class="fab fa-node-js"></i>
+                    </span>
+                    Node.js
+                </p>
+                <p>
+                    <span class="fa-icon">
+                        <i class="fab fa-java"></i>
+                    </span>
+                    Java
+                </p>
+                <p>
+                    <span class="fa-icon">
+                        <i class="fab fa-python"></i>
+                    </span>
+                    Python
+                </p>
+                <p>
+                    <span class="fa-icon">
+                        <i class="fas fa-database"></i>
+                    </span>
+                    SQL
+                </p>
+                <p>
+                    <span class="fa-icon">
+                        <i class="fab fa-git-alt"></i>
+                    </span>
+                    Git
+                </p>
+                <p>
+                    <span class="fa-icon">
+                        <i class="fab fa-github"></i>
+                    </span>
+                    GitHub
+                </p>
+                </div>
             </section>
             <section class="bg-white projects section container container-center">
                 <h2 class="section-head primary-color">Projects</h2>
@@ -67,11 +117,13 @@
                 <hr />
 
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>Discovering my Love for Programming</h3>
-                <p>Halfway through my graduation degree, I started enjoying programming, and  decided to explore the domain further. After participating in a few inter-collegiate Hackathons, I had a change of heart and took a bold leap from <strong><em class="secondary-color">teaching to programming</em></strong>. Thus began my ride of Software Development, Web Development, Android Application Development, and also Machine Learning.</p>
+                <p>Halfway through my graduation degree, I started enjoying programming, and  decided to explore the domain further. After participating in a few inter-collegiate Hackathons, I had a change of heart and took a bold leap from <strong><em class="secondary-color">teaching to programming</em></strong>.</p> 
+                <p class="bg-dark-gray">Thus began my ride of Software Development, Web Development, Android Application Development, and also Machine Learning.</p>
                 <hr />
 
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>After College, What's Next Now?</h3>
-                <p>I graduated with a degree in <abbr title="Bachelor of Computer Applications">B.C.A.</abbr> in the year 2020. A major question that kept creeping back is <strong>what now, that I am done with college?</strong> I did get placed in a reputed Consulting US firm, but then I didn't know where to go now in terms on learning. I tried exploring Machine Learning and Data Science, but then I found myself in a road block. That's when I discovered <strong class="secondary-color"><a href="https://neog.camp/">neoG.Camp</a></strong> in November 2020. I had a few more months to onboard into the firm, so I utilized that time in building and refactoring my skills. Not only did this initiative make me confident, they also gave me a proper vision and a guide for my future ahead.</p>
+                <p>I graduated with a degree in <abbr title="Bachelor of Computer Applications">B.C.A.</abbr> in the year 2020. A major question that kept creeping back is <strong>what now, that I am done with college?</strong> I did get placed in a reputed Consulting US firm, but then I didn't know where to go now in terms on learning. I tried exploring Machine Learning and Data Science, but then I found myself in a road block.</p>
+                <p>That's when I discovered <strong class="secondary-color"><a href="https://neog.camp/">neoG.Camp</a></strong> in November 2020. I had a few more months to onboard into the firm, so I utilized that time in building and refactoring my skills. Not only did this initiative make me confident, they also gave me a proper vision and a guide for my future ahead.</p>
                 <hr />
 
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>What am I upto now?</h3>
@@ -117,7 +169,7 @@
                 <li>
                     <a href="https://twitter.com/_girlwhocodes" class="link">
                         <span class="fa-icon">
-                            <i class="fab fa-twitter-square"></i>
+                            <i class="fab fa-twitter"></i>
                         </span>
                         Twitter
                     </a>
@@ -125,7 +177,7 @@
                 <li>
                     <a href="https://www.instagram.com/bharati_codes/" class="link">
                         <span class="fa-icon">
-                            <i class="fab fa-instagram-square"></i>
+                            <i class="fab fa-instagram"></i>
                         </span>
                         Instagram
                     </a>
