--- a/lib/components.html
+++ b/lib/components.html
@@ -116,6 +116,23 @@
             <h3>@Gray Section</h3>
             <p>This section will have a light gray background</p>
         </section>
+        
+        <!--
+
+            <ul class="inline-list">
+                        <li><span class="fa-icon"><i class="fab fa-html5"></i></span>HTML5</li>
+                        <li><span class="fa-icon"><i class="fab fa-css3-alt"></i></span>CSS3</li>
+                        <li><span class="fa-icon"><i class="fab fa-js"></i></span>JavaScript</li>
+                        <li><span class="fa-icon"><i class="fab fa-react"></i></span>ReactJS</li>
+                        <li><span class="fa-icon"><i class="fab fa-node-js"></i></span>Node.js</li>
+                        <li><span class="fa-icon"><i class="fab fa-java"></i></span>Java</li>
+                        <li><span class="fa-icon"><i class="fab fa-python"></i></span>Python</li>
+                        <li><span class="fa-icon"><i class="fas fa-database"></i></span>SQL</li>
+                        <li><span class="fa-icon"><i class="fab fa-git-alt"></i></span>Git</li>
+                        <li><span class="fa-icon"><i class="fab fa-github"></i></span>GitHub</li>
+                        <li></li>
+                    </ul>
+        -->
 
         <hr />
 
