finished index and created blog, about and project

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         <nav class="nav-bar container">
             <div class="brand"><em>Bharati Subramanian</em></div>
             <ul class="inline-list nav-bar-links">
-                <li><a href="/" class="link nav-link active">Home</a></li>
+                <li><a href="index.html" class="link nav-link active">Home</a></li>
+                <li><a href="./about.html" class="link nav-link">About</a></li>
                 <li><a href="./projects.html" class="link nav-link">Projects</a></li>
-                <li><a href="/" class="link nav-link">Blogs</a></li>
+                <li><a href="./blogs.html" class="link nav-link">Blogs</a></li>
             </ul>
         </nav>
         <header class="hero">
@@ -28,7 +29,7 @@
         </header>
         <main class="main">
             <section class="bg-light-gray technologies section container container-center">
-                <h2 class="section-head secondary-color">Technologies and Skills</h2>
+                <h2 class="section-head secondary-color">Technologies</h2>
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>Some of the technologies I am familiar with are:</h3>
                 <div class="tech-stack">
                 <p class="tech-stack">
@@ -112,29 +113,10 @@
             </section>
             <section class="bg-white about section container container-center">
                 <h2 class="section-head secondary-color">ABOUT ME</h2>
-                <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>My Technical Journey</h3>
-                <p>My journey with Computer Science began in secondary school, when I opted for Computer Science + PCM as my major stream for class 11<sup>th</sup> and 12<sup>th</sup>. What began as a path lacking direction, led to my love for teaching. Hence, I decided to go for <strong class="primary-color">Bachelor of Computer Applications</strong> for my graduation and Computer Science as my major</p>
-                <hr />
-
-                <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>Discovering my Love for Programming</h3>
-                <p>Halfway through my graduation degree, I started enjoying programming, and  decided to explore the domain further. After participating in a few inter-collegiate Hackathons, I had a change of heart and took a bold leap from <strong><em class="secondary-color">teaching to programming</em></strong>.</p> 
-                <p class="bg-dark-gray">Thus began my ride of Software Development, Web Development, Android Application Development, and also Machine Learning.</p>
-                <hr />
-
-                <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>After College, What's Next Now?</h3>
-                <p>I graduated with a degree in <abbr title="Bachelor of Computer Applications">B.C.A.</abbr> in the year 2020. A major question that kept creeping back is <strong>what now, that I am done with college?</strong> I did get placed in a reputed Consulting US firm, but then I didn't know where to go now in terms on learning. I tried exploring Machine Learning and Data Science, but then I found myself in a road block.</p>
-                <p>That's when I discovered <strong class="secondary-color"><a href="https://neog.camp/">neoG.Camp</a></strong> in November 2020. I had a few more months to onboard into the firm, so I utilized that time in building and refactoring my skills. Not only did this initiative make me confident, they also gave me a proper vision and a guide for my future ahead.</p>
-                <hr />
-
-                <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>What am I upto now?</h3>
-                <p>I am constantly learning, evolving, exploring and developing.</p>
-                <p>Professionally, I have been working in <strong class="primary-color">Deloitte India (Offices of the U.S)</strong> as an <em class="secondary-color">Associate Analyst</em> since <date0>18th January 2021</date>.</p> 
-                <hr/>         
-
-                <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>My Interests and Hobbies</h3>
-                <p>My technical interests align with software and web development. I have also tried summoning my inner designer, but haven't been able to do so yet! Maybe someday in the future!?</p> 
-                <p>Apart from tech, <strong class="primary-color">I love singing and reading books.</strong> I am an avid reader, and read almost everyday. My favorite genres are fiction, fantasy, thriller, adventure and mystery. I have also been trained in Classical Carnatic Music for over 12 years.</p>  
-            
+                <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>Find more about me. Who am I, What I do, and What I like.</h3>
+                <div class="links-container">
+                    <a target="_blank" href="about.html" class="link link-primary">Read about me</a>
+                </div>
             </section>
         </main>
         <footer class="footer container bg-dark-gray">
