--- a/projects.html
+++ b/projects.html
@@ -9,8 +9,7 @@
 
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="mobile.css">
-
-
+        
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     </head>
     <body>
@@ -19,8 +18,8 @@
             <ul class="inline-list nav-bar-links">
                 <li><a href="index.html" class="link nav-link">Home</a></li>
                 <li><a href="./about.html" class="link nav-link">About</a></li>
-                <li><a href="./projects.html" class="link nav-link">Projects</a></li>
-                <li><a href="./blogs.html" class="link nav-link active">Blogs</a></li>
+                <li><a href="./projects.html" class="link nav-link active">Projects</a></li>
+                <li><a href="./blogs.html" class="link nav-link">Blogs</a></li>
             </ul>
         </nav>
         <header class="hero">
@@ -29,7 +28,7 @@
             <p class="lead-text">A <strong class="primary-color">Web Developer</strong> in the making who's passionate about programming, music, and books.
         </header>
         <main class="main">
-            <h1 class="main-head secondary-color">MY BLOG POSTS</h1>
+            <h1 class="main-head secondary-color">MY WORK AND PROJECTS</h1>
         </main>
 
         <footer class="footer container bg-dark-gray">
