--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
         <title>Bharati | About</title>
 
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="mobile.css">
+
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     </head>
     <body>
@@ -20,8 +22,8 @@
                 <li><a href="./blogs.html" class="link nav-link">Blogs</a></li>
             </ul>
         </nav>
-        <header class="hero">
-            <img class="hero-img" src="../Images/undraw.png" alt="Hero Image">
+        <header class="hero about-header">
+            <img class="hero-img about-hero" src="./Images/about-hero.png" alt="Hero Image">
             <h1 class="hero-head">Bharati Subramanian</h1>
             <p class="lead-text">A <strong class="primary-color">Web Developer</strong> in the making who's passionate about programming, music, and books.
         </header>
