--- a/blogs.html
+++ b/blogs.html
@@ -10,7 +10,6 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="mobile.css">
 
-
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     </head>
     <body>
@@ -23,8 +22,8 @@
                 <li><a href="./blogs.html" class="link nav-link active">Blogs</a></li>
             </ul>
         </nav>
-        <header class="hero">
-            <img class="hero-img" src="../Images/undraw.png" alt="Hero Image">
+        <header class="hero blogs-header">
+            <img class="hero-img blogs-hero" src="/Images/blogs-hero.png" alt="Hero Image">
             <h1 class="hero-head">Bharati Subramanian</h1>
             <p class="lead-text">A <strong class="primary-color">Web Developer</strong> in the making who's passionate about programming, music, and books.
         </header>
