Style: changes hero margin

--- a/blogs.html
+++ b/blogs.html
@@ -27,7 +27,7 @@
             <h1 class="hero-head">Bharati Subramanian</h1>
             <p class="lead-text">A <strong class="primary-color">Web Developer</strong> in the making who's passionate about programming, music, and books.
         </header>
-        <main class="main">
+        <main class="main blogs-main">
             <h1 class="main-head secondary-color">MY BLOG POSTS</h1>
         </main>
 
