--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <h1 class="hero-head">Bharati Subramanian</h1>
             <p class="lead-text">A <strong class="primary-color">Web Developer</strong> in the making who's passionate about programming, music, and books.
         </header>
-        <main class="main">
+        <main class="main index-main">
             <section class="bg-light-gray technologies section container container-center">
                 <h2 class="section-head secondary-color">Technologies</h2>
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>Some of the technologies I am familiar with are:</h3>
@@ -115,7 +115,7 @@
                 <h2 class="section-head secondary-color">ABOUT ME</h2>
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>Find more about me. Who am I, What I do, and What I like.</h3>
                 <div class="links-container">
-                    <a target="_blank" href="about.html" class="link link-primary">Read about me</a>
+                    <a href="about.html" class="link link-primary">Read about me</a>
                 </div>
             </section>
         </main>
