feature: Added project list

--- a/projects.html
+++ b/projects.html
@@ -27,8 +27,16 @@
             <h1 class="hero-head">Bharati Subramanian</h1>
             <p class="lead-text">A <strong class="primary-color">Web Developer</strong> in the making who's passionate about programming, music, and books.
         </header>
-        <main class="main">
+        <main class="main projects-main">
             <h1 class="main-head secondary-color">MY WORK AND PROJECTS</h1>
+            <section class="bg-white my-projects section container container-center">
+                <ol reversed class="project-list">
+                    <h2><li>Speak Banana</li></h2>
+                    <h2><li>Are you a Potterhead?</li></h2>
+                    <h2><li>Do you know me?</li></h2>
+                </ol>
+
+            </section>
         </main>
 
         <footer class="footer container bg-dark-gray">
@@ -77,7 +85,7 @@
                     </a>
                 </li>
                 <li class="inline-list">
-                    <a href="" class="link">
+                    <a href="#" class="link">
                         <span class="fa-icon">
                             <i class="fab fa-goodreads"></i>
                         </span>
@@ -85,7 +93,6 @@
                     </a>
                 </li>
             </ul>
-
         </footer>
     </body>
 </html>
