Completed projects.html

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>Browse my projects and work that I have hosted online.
                 </h3>
                 <div class="links-container">
-                    <a target="_blank" href="projects.html" class="link link-primary">Browse Projects</a>
+                    <a href="projects.html" class="link link-primary">Browse Projects</a>
                     <a target="_blank" href="https://github.com/bharati-21" class="link link-secondary">Browse GitHub</a>
                 </div>
             </section>
@@ -108,7 +108,7 @@
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>I also write technical blog posts to document my learning and deepen my understanding.
                 </h3>
                 <div class="links-container">
-                    <a target="_blank" href="https://dev.to/bharati21" class="link link-primary">Check out my Blogs</a>
+                    <a href="https://dev.to/bharati21" class="link link-primary">Check out my Blogs</a>
                 </div>
             </section>
             <section class="bg-white about section container container-center">
