Completed blogs.html

--- a/blogs.html
+++ b/blogs.html
@@ -29,6 +29,72 @@
         </header>
         <main class="main blogs-main">
             <h1 class="main-head secondary-color">MY BLOG POSTS</h1>
+            <section class="my-blogs section container-center">
+                <ul class="blog-list list-non-bullet">
+                    <div class="list-item-container">
+                        <h2 class="blog-name">
+                            <li class="list-item"><span style="color: var(--secondary-color);" class="fa-icon"><i class="far fa-clipboard"></i></span> Introduction to Responsive Design</li>
+                        </h2>
+                        <small class="blog-date">June 16, 2021</small>
+                        <p class="blog-gist">This blog explains and summarizes the CSS Flexbox <strong>flex-item properties</strong> in depth to make layouts easier and responsive. </p>
+                        <a target="_blank" href="https://dev.to/bharati21/introduction-to-responsive-design-35hc" class="link link-primary">
+                            <span class="fa-icon" style="color: var(--dark-gray); font-size: 1.2rem;">
+                                <i class="fab fa-dev"></i>
+                            </span> 
+                            Read More
+                        </a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="blog-name">
+                            <li class="list-item"><span style="color: var(--secondary-color);" class="fa-icon"><i class="far fa-clipboard"></i></span> Common Use Cases of CSS Flexbox</li>
+                        </h2>
+                        <small class="blog-date">June 02, 2021</small>
+                        <p class="blog-gist">This blog explains and summarizes the CSS Flexbox <strong>flex-item properties</strong> in depth to make layouts easier and responsive. </p>
+                        <a target="_blank" href="https://dev.to/bharati21/common-use-cases-of-css-flexbox-39ek" class="link link-primary">
+                            <span class="fa-icon" style="color: var(--dark-gray); font-size: 1.2rem;">
+                                <i class="fab fa-dev"></i>
+                            </span> 
+                            Read More
+                        </a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="blog-name">
+                            <li class="list-item"><span style="color: var(--secondary-color);" class="fa-icon"><i class="far fa-clipboard"></i></span> CSS Flex Item Properties</li>
+                        </h2>
+                        <small class="blog-date">24 May, 2021</small>
+                        <p class="blog-gist">This blog explains and summarizes the CSS Flexbox <strong>flex-item properties</strong> in depth to make layouts easier and responsive. </p>
+                        <a target="_blank" href="https://dev.to/bharati21/css-flexbox-making-layouts-easy-part-2-4ok2" class="link link-primary">
+                            <span class="fa-icon" style="color: var(--dark-gray); font-size: 1.2rem;">
+                                <i class="fab fa-dev"></i>
+                            </span> 
+                            Read More
+                        </a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="blog-name">
+                            <li class="list-item">
+                                <span style="color: var(--secondary-color);" class="fa-icon">
+                                    <i class="far fa-clipboard"></i>
+                                </span> 
+                                CSS Flex-Container Properties
+                            </li>
+                        </h2>
+                        <small class="blog-date">
+                            May 16, 2021
+                        </small>
+                        <p class="blog-gist">
+                            This blog explains and summarizes the CSS Flexbox <strong>flex-container properties</strong> in depth to make layouts easier and responsive. 
+                        </p>
+                        <a target="_blank" href="https://dev.to/bharati21/css-flexbox-making-layout-design-easy-part-1-24l5" class="link link-primary">
+                            <span class="fa-icon" style="color: var(--dark-gray); font-size: 1.2rem;">
+                                <i class="fab fa-dev"></i>
+                            </span> 
+                            Read More
+                        </a>
+                    </div>
+                </ul>
+
+            </section>
         </main>
 
         <footer class="footer container bg-dark-gray">
