--- a/projects.html
+++ b/projects.html
@@ -33,14 +33,14 @@
                 <ol reversed class="project-list">
                     <div class="list-item-container">
                         <h2 class="project-name">
-                            <li class="list-item"><span style="color: var(--dark-gray);">Speak Banana</span></li>
+                            <li class="list-item"><span class="fa-icon"></span><span style="color: var(--dark-gray);">Speak Banana</span></li>
                         </h2>
                     </div>
                     <div class="list-item-container">
                         <h2 class="project-name">
                             <li class="list-item"><span style="color: var(--dark-gray);">Do you know me?</span></li>
                         </h2>
-                        <small class="project-date">June 12, 2021</small>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>June 12, 2021</small>
                         <p class="project-gist">This is a fun, short quiz to test how well my close friends and family know me!</p>
                         <a target="_blank" href="https://replit.com/@bhaaratii/how-well-do-you-know-me?embed=1&output=1#README.md" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/how-well-do-you-know-me" class="link link-secondary">View Source</a>
@@ -49,7 +49,7 @@
                         <h2 class="project-name">
                             <li class="list-item"><span style="color: var(--dark-gray);">Are you a Potterhead?</span></li>
                         </h2>
-                        <small class="project-date">June 12, 2021</small>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>June 12, 2021</small>
                         <p class="project-gist">Are you a Potterhead fan? Take this quiz to test how well you know the Harry Potter books.</p>
                         <a target="_blank" href="https://replit.com/@bhaaratii/JS-Quiz-1?embed=1&output=1#README.md" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/JS-Quiz" class="link link-secondary">View Source</a>
