Added banana talk to projects

--- a/projects.html
+++ b/projects.html
@@ -31,10 +31,15 @@
             <h1 class="main-head secondary-color">MY WORK AND PROJECTS</h1>
             <section class="my-projects section container-center">
                 <ol reversed class="project-list">
+                    
                     <div class="list-item-container">
                         <h2 class="project-name">
-                            <li class="list-item"><span class="fa-icon"></span><span style="color: var(--dark-gray);">Speak Banana</span></li>
+                            <li class="list-item"><span style="color: var(--dark-gray);">Minion's Banana Talk</span></li>
                         </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>June 30, 2021</small>
+                        <p class="project-gist">This is a fun, simple and sweet translator that translates English to Minion's Banana language.</p>
+                        <a target="_blank" href="https://bharati-banana-talk.netlify.app/" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://github.com/bharati-21/banana-talk" class="link link-secondary">View Source</a>
                     </div>
                     <div class="list-item-container">
                         <h2 class="project-name">
