feat: added new project

--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,15 @@
             <h1 class="main-head secondary-color">MY WORK AND PROJECTS</h1>
             <section class="my-projects section container-center">
                 <ol reversed class="project-list">
-                    
+                    <div class="list-item-container">
+                        <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">Star Trek's Vulcan Translator</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 03, 2021</small>
+                        <p class="project-gist">This is a fun and simple translator that converts English to the famous Star Trek's Vulcan language.</p>
+                        <a target="_blank" href="https://bharati-vulcan-translator.netlify.app/" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://github.com/bharati-21/vulcan-translator" class="link link-secondary">View Source</a>
+                    </div>
                     <div class="list-item-container">
                         <h2 class="project-name">
                             <li class="list-item"><span style="color: var(--dark-gray);">Minion's Banana Talk</span></li>
