--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,24 @@
                 <ol reversed class="project-list">
                     <div class="list-item-container">
                         <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">Book Recommender</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 06, 2021</small>
+                        <p class="project-gist">Web App created using ReactJS that allows user click genres to view Books read and recommended by <em>Bharati Subramanian</em>.</p>
+                        <a target="_blank" href=" https://bdzir.csb.app" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://github.com/bharati-21/book-recommender/tree/main/" class="link link-secondary">View Source</a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="project-name">
+                            <li class="list-item"><span style="color: var(--dark-gray);">Emoji Interpreter</span></li>
+                        </h2>
+                        <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 06, 2021</small>
+                        <p class="project-gist">This is a small web app using ReactJS that interprets the emojis entered and clicked by the user.</p>
+                        <a target="_blank" href="https://ich7q.csb.app" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://github.com/bharati-21/emoji-interpreter" class="link link-secondary">View Source</a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="project-name">
                             <li class="list-item"><span style="color: var(--dark-gray);">Star Trek's Vulcan Translator</span></li>
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 03, 2021</small>
