styles: changed section buttons

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </h3>
                 <div class="links-container">
                     <a href="projects.html" class="link link-primary">Browse Projects</a>
-                    <a target="_blank" href="https://github.com/bharati-21" class="link link-secondary">Browse GitHub</a>
+                    <a target="_blank" href="https://github.com/bharati-21" class="link link-secondary secondary-color">Browse GitHub</a>
                 </div>
             </section>
             <section class="bg-light-gray blogs section container container-center">
@@ -112,7 +112,7 @@
                 </div>
             </section>
             <section class="bg-white about section container container-center">
-                <h2 class="section-head secondary-color">ABOUT ME</h2>
+                <h2 class="section-head primary-color">ABOUT ME</h2>
                 <h3 class="section-lead"><span class="fa-icon"><i class="fas fa-chevron-right"></i></span>Find more about me. Who am I, What I do, and What I like.</h3>
                 <div class="links-container">
                     <a href="about.html" class="link link-primary">Read about me</a>
