updated content fot blogs

--- a/blogs.html
+++ b/blogs.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Bharati | Projects</title>
+        <title>Bharati | Blogs</title>
 
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="mobile.css">
@@ -49,7 +49,7 @@
                             <li class="list-item"><span style="color: var(--secondary-color);" class="fa-icon"><i class="far fa-clipboard"></i></span> Common Use Cases of CSS Flexbox</li>
                         </h2>
                         <small class="blog-date">June 02, 2021</small>
-                        <p class="blog-gist">This blog explains and summarizes the CSS Flexbox <strong>flex-item properties</strong> in depth to make layouts easier and responsive. </p>
+                        <p class="blog-gist">This blog explains and summarizes the <strong>use cases of CSS Flexbox</strong> in everyday project development with examples and in depth explanations.</p>
                         <a target="_blank" href="https://dev.to/bharati21/common-use-cases-of-css-flexbox-39ek" class="link link-primary">
                             <span class="fa-icon" style="color: var(--dark-gray); font-size: 1.2rem;">
                                 <i class="fab fa-dev"></i>
@@ -63,10 +63,7 @@
                         </h2>
                         <small class="blog-date">24 May, 2021</small>
                         <p class="blog-gist">This blog explains and summarizes the CSS Flexbox <strong>flex-item properties</strong> in depth to make layouts easier and responsive. </p>
-                        <a target="_blank" href="https://dev.to/bharati21/css-flexbox-making-layouts-easy-part-2-4ok2" class="link link-primary">
-                            <span class="fa-icon" style="color: var(--dark-gray); font-size: 1.2rem;">
-                                <i class="fab fa-dev"></i>
-                            </span> 
+                        <a target="_blank" href="./blog-two.html" class="link link-primary">
                             Read More
                         </a>
                     </div>
@@ -85,10 +82,7 @@
                         <p class="blog-gist">
                             This blog explains and summarizes the CSS Flexbox <strong>flex-container properties</strong> in depth to make layouts easier and responsive. 
                         </p>
-                        <a target="_blank" href="https://dev.to/bharati21/css-flexbox-making-layout-design-easy-part-1-24l5" class="link link-primary">
-                            <span class="fa-icon" style="color: var(--dark-gray); font-size: 1.2rem;">
-                                <i class="fab fa-dev"></i>
-                            </span> 
+                        <a target="_blank" href="./blog-one.html" class="link link-primary">
                             Read More
                         </a>
                     </div>
