edited blog links

--- a/blog-two.html
+++ b/blog-two.html
@@ -55,8 +55,8 @@
                         <p><strong><em>In this post, we will go through the properties that are applied to flex items (children of flex parent container).</em></strong></p>
                     </ul>
 
-                    <p>Find the demo for Flex container properties <a class="blog-demo" href=" https://demo-flexbox.netlify.app/">demo here</a></p>
-                    <p >Find the demo <a class="blog-demo-code" href=" https://github.com/bharati-21/Flexbox-CSS">code here</a></p>
+                    <p>Find the demo for Flex item properties <a class="blog-demo" href="https://demo-flexbox.netlify.app/"  target="_blank">demo here</a></p>
+                    <p >Find the demo <a class="blog-demo-code" href="https://github.com/bharati-21/Flexbox-CSS"  target="_blank">code here</a></p>
                     <p>
                 </article>
                 <hr />
