--- a/blogs.html
+++ b/blogs.html
@@ -50,10 +50,7 @@
                         </h2>
                         <small class="blog-date">June 02, 2021</small>
                         <p class="blog-gist">This blog explains and summarizes the <strong>use cases of CSS Flexbox</strong> in everyday project development with examples and in depth explanations.</p>
-                        <a target="_blank" href="https://dev.to/bharati21/common-use-cases-of-css-flexbox-39ek" class="link link-primary">
-                            <span class="fa-icon" style="color: var(--dark-gray); font-size: 1.2rem;">
-                                <i class="fab fa-dev"></i>
-                            </span> 
+                        <a target="_blank" href="./blog-three.html" class="link link-primary">
                             Read More
                         </a>
                     </div>
