--- a/blog-one.html
+++ b/blog-one.html
@@ -43,8 +43,8 @@
                         <li>In this post, I will try to explain all the properties that are applied to the flex-container.</li>
                     </ul>
 
-                    <p>Find the demo for Flex container properties <a class="blog-demo" href="https://demo-flexbox.netlify.app/">demo here</a></p>
-                    <p >Find the demo <a class="blog-demo-code" href="https://github.com/bharati-21/Flexbox-CSS">code here</a></p>
+                    <p>Find the demo for Flex container properties <a class="blog-demo" href="https://demo-flexbox.netlify.app/" target="_blank">demo here</a></p>
+                    <p >Find the demo <a class="blog-demo-code" href="https://github.com/bharati-21/Flexbox-CSS" target="_blank">code here</a></p>
                     <p>
                 </article>
                 <hr />
