fix: added footer

--- a/blog-one.html
+++ b/blog-one.html
@@ -58,6 +58,60 @@
                 </article>
             </section>
         </main>
-        
+        <footer class="footer container bg-dark-gray">
+            <!-- <div class="footer-head">Thank you for visiting my space!</div>
+            <p>Follow me on social networking sites for more technical content!</p> -->
+            <ul class="social-links inline-list">
+                <li>
+                    <a href="https://github.com/bharati-21" class="link">
+                        <span class="fa-icon">
+                            <i class="fab fa-github"></i>
+                        </span>
+                        GitHub
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://www.linkedin.com/in/bharati-subramanian-29734b152/" class="link">
+                        <span class="fa-icon">
+                            <i class="fab fa-linkedin"></i>
+                        </span>
+                        LinkedIn
+                    </a>
+                </li>
+                <li>
+                    <a href="https://dev.to/bharati21" class="link">
+                        <span class="fa-icon">
+                            <i class="fab fa-dev"></i>
+                        </span>
+                        Dev.to
+                    </a>
+                </li>
+                <li>
+                    <a href="https://twitter.com/_girlwhocodes" class="link">
+                        <span class="fa-icon">
+                            <i class="fab fa-twitter"></i>
+                        </span>
+                        Twitter
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/bharati_codes/" class="link">
+                        <span class="fa-icon">
+                            <i class="fab fa-instagram"></i>
+                        </span>
+                        Instagram
+                    </a>
+                </li>
+                <li class="inline-list">
+                    <a href="" class="link">
+                        <span class="fa-icon">
+                            <i class="fab fa-goodreads"></i>
+                        </span>
+                        Goodreads
+                    </a>
+                </li>
+            </ul>
+        </footer>
     </body>
 </html>
