added blog four

--- a/blogs.html
+++ b/blogs.html
@@ -37,7 +37,7 @@
                         </h2>
                         <small class="blog-date">June 16, 2021</small>
                         <p class="blog-gist">This blog explains and summarizes the CSS Flexbox <strong>flex-item properties</strong> in depth to make layouts easier and responsive. </p>
-                        <a target="_blank" href="https://dev.to/bharati21/introduction-to-responsive-design-35hc" class="link link-primary">
+                        <a target="_blank" href="./blog-four.html" class="link link-primary">
                             <span class="fa-icon" style="color: var(--dark-gray); font-size: 1.2rem;">
                                 <i class="fab fa-dev"></i>
                             </span> 
