added blog five

--- a/blogs.html
+++ b/blogs.html
@@ -33,14 +33,31 @@
                 <ul class="blog-list list-non-bullet">
                     <div class="list-item-container">
                         <h2 class="blog-name">
+                            <li class="list-item"><span style="color: var(--secondary-color);" class="fa-icon"><i class="far fa-clipboard"></i></span> Demystifying Position Property</li>
+                        </h2>
+                        <small class="blog-date">July 11, 2021</small>
+                        <p class="blog-gist">This blog explains the CSS <strong>Position Property</strong> that is used to organize and specify how an element must appear in the browser.</p>
+                        <a target="_blank" href="./blog-six.html" class="link link-primary">
+                            Read More
+                        </a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="blog-name">
+                            <li class="list-item"><span style="color: var(--secondary-color);" class="fa-icon"><i class="far fa-clipboard"></i></span> Responsive Fonts In CSS</li>
+                        </h2>
+                        <small class="blog-date">June 29, 2021</small>
+                        <p class="blog-gist">This blog explains some common CSS <strong>Responsive Font Units</strong> in depth to make fonts adapt to different screen sizes and font appearance settings in browsers.</p>
+                        <a target="_blank" href="./blog-five.html" class="link link-primary">
+                            Read More
+                        </a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="blog-name">
                             <li class="list-item"><span style="color: var(--secondary-color);" class="fa-icon"><i class="far fa-clipboard"></i></span> Introduction to Responsive Design</li>
                         </h2>
                         <small class="blog-date">June 16, 2021</small>
-                        <p class="blog-gist">This blog explains and summarizes the CSS Flexbox <strong>flex-item properties</strong> in depth to make layouts easier and responsive. </p>
+                        <p class="blog-gist">This blog explains and summarizes <strong>Responsive Design</strong> which helps in creating websites that adjust to different screen sizes and viewports.</p>
                         <a target="_blank" href="./blog-four.html" class="link link-primary">
-                            <span class="fa-icon" style="color: var(--dark-gray); font-size: 1.2rem;">
-                                <i class="fab fa-dev"></i>
-                            </span> 
                             Read More
                         </a>
                     </div>
