--- a/blogs.html
+++ b/blogs.html
@@ -33,6 +33,16 @@
                 <ul class="blog-list list-non-bullet">
                     <div class="list-item-container">
                         <h2 class="blog-name">
+                            <li class="list-item"><span style="color: var(--secondary-color);" class="fa-icon"><i class="far fa-clipboard"></i></span> JavaScript loading techniques & Performance</li>
+                        </h2>
+                        <small class="blog-date">July 18, 2021</small>
+                        <p class="blog-gist">This blog explains <strong>JavaScript Loading Techniques</strong> and compares their performances.</p>
+                        <a target="_blank" href="./blog-six.html" class="link link-primary">
+                            Read More
+                        </a>
+                    </div>
+                    <div class="list-item-container">
+                        <h2 class="blog-name">
                             <li class="list-item"><span style="color: var(--secondary-color);" class="fa-icon"><i class="far fa-clipboard"></i></span> Demystifying Position Property</li>
                         </h2>
                         <small class="blog-date">July 11, 2021</small>
