--- a/projects.html
+++ b/projects.html
@@ -82,7 +82,7 @@
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>June 12, 2021</small>
                         <p class="project-gist">Are you a Potterhead fan? Take this quiz to test how well you know the Harry Potter books.</p>
-                        <a target="_blank" href="https://replit.com/@bhaaratii/JS-Quiz-1?embed=1&output=1#README.md" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://replit.com/@bhaaratii/JS-Quiz?embed=1&output=1#README.md" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/JS-Quiz" class="link link-secondary">View Source</a>
                     </div>
                 </ol>
