fix: project links

--- a/projects.html
+++ b/projects.html
@@ -46,7 +46,7 @@
                         </h2>
                         <small class="project-date"><span class="fa-icon"><i class="fas fa-desktop"></i> </span>July 06, 2021</small>
                         <p class="project-gist">This is a small web app using ReactJS that interprets the emojis entered and clicked by the user.</p>
-                        <a target="_blank" href="https://ich7q.csb.app" class="link link-primary">Live Demo</a>
+                        <a target="_blank" href="https://ich7q.csb.app/" class="link link-primary">Live Demo</a>
                         <a target="_blank" href="https://github.com/bharati-21/emoji-interpreter" class="link link-secondary">View Source</a>
                     </div>
                     <div class="list-item-container">
